--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body
 		{
 				background:url('hands.jpg') no-repeat center center fixed;
-				background-size: cover;
+				background-size:100% auto;
 				-webkit-background-size: cover;
 				-moz-background-size: cover;
 				margin: 0;
 				padding: 0;
 				font-family: 'Kameron', serif;
-
 		}
 
 .well {
@@ -19,12 +18,12 @@ body
 }
 
 .logo {
-	width: 75%;
-	height:75%;
+	width: 50%;
+	height:50%;
 }
 
 footer {
-		padding: 20px;
+	padding: 20px;
    background-color: black;
 	 color: white;
 }
